@@ -1,3 +1,11 @@
+2004-08-02  Peter Bruin  <pjbruin@dds.nl>
+
+	* loader/powerpc/ieee1275/linux.c (grub_linux_init): Pass
+	grub_load_linux instead of grub_rescue_cmd_linux as second
+	argument of grub_rescue_register_command.
+
+	* Makefile.in (RMKFILES): Add conf/powerpc-ieee1275.rmk.
+
 2004-07-27  Marco Gerards  <metgerards@student.han.nl>
 
 	* boot/powerpc/ieee1275/ieee1275.c (grub_ieee1275_release): New
